nivasa-macros/tests/trybuild/scxml_handler_missing_statechart_arg.rs
use nivasa_macros::scxml_handler;

#[scxml_handler(state = "guard_chain")]
fn handler() {}

fn main() {}
